--- a/angular7-portfolio/package.json
+++ b/angular7-portfolio/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "bootstrap": "^4.3.1",
     "firebase": "^6.1.1",
     "rxjs": "~6.4.0",
